--- a/features/step_definitions/airbrake_shim.rb.template
+++ b/features/step_definitions/airbrake_shim.rb.template
@@ -1,13 +1,13 @@
 require 'sham_rack'
 
-ShamRack.at("airbrakeapp.com") do |env|
+ShamRack.at("airbrake.io") do |env|
   xml = env['rack.input'].read
   puts "Recieved the following exception:\n#{xml}"
   response = <<-end_xml
 <?xml version="1.0" encoding="UTF-8"?>
 <notice>
   <error-id type="integer">3799307</error-id>
-  <url>http://sample.airbrakeapp.com/errors/3799307/notices/643732254</url>
+  <url>http://sample.airbrake.io/errors/3799307/notices/643732254</url>
   <id type="integer">643732254</id>
 </notice>
   end_xml
