--- a/features/support/airbrake_shim.rb.template
+++ b/features/support/airbrake_shim.rb.template
@@ -1,15 +1,12 @@
 require 'sham_rack'
 
-ShamRack.at("airbrake.io") do |env|
-  xml = env['rack.input'].read
-  puts "Recieved the following exception:\n#{xml}"
+ShamRack.at("api.airbrake.io") do |env|
   response = <<-end_xml
-<?xml version="1.0" encoding="UTF-8"?>
+** [Airbrake] Response from Airbrake:
 <notice>
-  <error-id type="integer">3799307</error-id>
-  <url>http://sample.airbrake.io/errors/3799307/notices/643732254</url>
-  <id type="integer">643732254</id>
+<id>b6817316-9c45-ed26-45eb-780dbb86aadb</id>
+<url>http://airbrake.io/locate/b6817316-9c45-ed26-45eb-780dbb86aadb</url>
 </notice>
   end_xml
-  ["200 OK", { "Content-type" => "text/xml" }, response]
+  ["200 OK", { "Content-type" => "text/xml" }, [response]]
 end
