--- a/features/support/rake/Rakefile
+++ b/features/support/rake/Rakefile
@@ -44,7 +44,7 @@ task :airbrake_not_yet_configured do
 end
 
 module Airbrake
-  def self.notify(*args)
+  def self.notify_or_ignore(*args)
     # TODO if you need to check more params, you'll have to use json.dump or something
     $stderr.puts "airbrake #{args[1][:component]}"
   end
