update supported rails versions

--- a/features/support/airbrake_shim.rb.template
+++ b/features/support/airbrake_shim.rb.template
@@ -1,6 +1,6 @@
 require 'sham_rack'
 
-Airbrake.configuration.logger = Logger.new STDOUT
+Airbrake.configuration.logger = Logger.new STDOUT if defined?(Airbrake)
 
 ShamRack.at("api.airbrake.io") do |env|
   response = <<-end_xml
