--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -4,5 +4,6 @@ exclude_paths:
   - "test/*"
   - lib/airbrake/notice/xml_builder.rb
   - lib/airbrake/notice/json_builder.rb
+  - features/*
   - .codeclimate.yml
 
