Add rubocop_todo.yml containing new offenses
The Rubocop gem has been updated recently and we're now getting some
new offenses. In this commit we store them (and ignore, so the test
suite can pass) and then we can fix them later, one by one.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,3 +1,5 @@
+inherit_from: .rubocop_todo.yml
+
 # Explanations of all possible options:
 #   https://github.com/bbatsov/rubocop/blob/master/config/default.yml
 AllCops:
