rubocop: fix the Style/ConditionalAssignment cop offesnes

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -64,3 +64,6 @@ Style/SpaceInsideParens:
 # TODO: enable this when Ruby 3.0 is out.
 Style/FrozenStringLiteralComment:
   Enabled: false
+
+Style/ConditionalAssignment:
+  Enabled: true
