circle.yml: add 1.9.2 and run more tests on JRuby

--- a/circle.yml
+++ b/circle.yml
@@ -14,14 +14,26 @@ dependencies:
             rvm-exec 1.9.3-p551 bundle exec appraisal install --jobs=15
             ;;
           1)
+            rvm-exec 2.0.0-p645 bundle install --jobs=15 --path=vendor
+            rvm-exec 2.0.0-p645 bundle exec appraisal install --jobs=15
+            ;;
+          2)
             rvm-exec 2.3.0 bundle install --jobs=15 --path=vendor
             rvm-exec 2.3.0 bundle exec appraisal install --jobs=15
             ;;
-          2)
+          3)
             # The 'dev' switch makes JRuby start about 2.5 times faster.
             # See: https://github.com/jruby/jruby/wiki/Improving-startup-time
-            JRUBY_OPTS="--dev -Xcompile.invokedynamic=false -J-XX:+TieredCompilation -J-XX:TieredStopAtLevel=1 -J-noverify -Xcompile.mode=OFF" rvm-exec jruby-1.7.19 bundle install --jobs=15 --path=vendor
-            JRUBY_OPTS="--dev -Xcompile.invokedynamic=false -J-XX:+TieredCompilation -J-XX:TieredStopAtLevel=1 -J-noverify -Xcompile.mode=OFF" rvm-exec jruby-1.7.19 bundle exec appraisal install --jobs=15
+            JRUBY_OPTS="--dev -Xcompile.invokedynamic=false -J-XX:+TieredCompilation -J-XX:TieredStopAtLevel=1 -J-noverify -Xcompile.mode=OFF" rvm-exec jruby-9.0.4.0 bundle install --jobs=15 --path=vendor
+            JRUBY_OPTS="--dev -Xcompile.invokedynamic=false -J-XX:+TieredCompilation -J-XX:TieredStopAtLevel=1 -J-noverify -Xcompile.mode=OFF" rvm-exec jruby-9.0.4.0 bundle exec appraisal install --jobs=15
+            ;;
+          4)
+            JRUBY_OPTS="--dev -Xcompile.invokedynamic=false -J-XX:+TieredCompilation -J-XX:TieredStopAtLevel=1 -J-noverify -Xcompile.mode=OFF" rvm-exec jruby-9.0.4.0 bundle install --jobs=15 --path=vendor
+            JRUBY_OPTS="--dev -Xcompile.invokedynamic=false -J-XX:+TieredCompilation -J-XX:TieredStopAtLevel=1 -J-noverify -Xcompile.mode=OFF" rvm-exec jruby-9.0.4.0 bundle exec appraisal install --jobs=15
+            ;;
+          5)
+            JRUBY_OPTS="--dev -Xcompile.invokedynamic=false -J-XX:+TieredCompilation -J-XX:TieredStopAtLevel=1 -J-noverify -Xcompile.mode=OFF" rvm-exec jruby-9.0.4.0 bundle install --jobs=15 --path=vendor
+            JRUBY_OPTS="--dev -Xcompile.invokedynamic=false -J-XX:+TieredCompilation -J-XX:TieredStopAtLevel=1 -J-noverify -Xcompile.mode=OFF" rvm-exec jruby-9.0.4.0 bundle exec appraisal install --jobs=15
             ;;
         esac
       :
@@ -43,6 +55,16 @@ test:
             rvm-exec 1.9.3-p551 bundle exec appraisal rack rake spec:integration:rack
             ;;
           1)
+            rvm-exec 2.0.0-p645 bundle exec appraisal rails-3.2 rake spec:integration:rails
+            rvm-exec 2.0.0-p645 bundle exec appraisal rails-4.0 rake spec:integration:rails
+            rvm-exec 2.0.0-p645 bundle exec appraisal rails-4.1 rake spec:integration:rails
+            rvm-exec 2.0.0-p645 bundle exec appraisal rails-4.2 rake spec:integration:rails
+
+            rvm-exec 2.0.0-p645 bundle exec appraisal sinatra rake spec:integration:sinatra
+
+            rvm-exec 2.0.0-p645 bundle exec appraisal rack rake spec:integration:rack
+            ;;
+          2)
             rvm-exec 2.3.0 bundle exec appraisal rails-3.2 rake spec:integration:rails
             rvm-exec 2.3.0 bundle exec appraisal rails-4.0 rake spec:integration:rails
             rvm-exec 2.3.0 bundle exec appraisal rails-4.1 rake spec:integration:rails
@@ -53,9 +75,17 @@ test:
 
             rvm-exec 2.3.0 bundle exec appraisal rack rake spec:integration:rack
             ;;
-          2)
-            JRUBY_OPTS="--dev -Xcompile.invokedynamic=false -J-XX:+TieredCompilation -J-XX:TieredStopAtLevel=1 -J-noverify -Xcompile.mode=OFF" rvm-exec jruby-1.7.19 bundle exec appraisal rails-3.2 rake spec:integration:rails
-            JRUBY_OPTS="--dev -Xcompile.invokedynamic=false -J-XX:+TieredCompilation -J-XX:TieredStopAtLevel=1 -J-noverify -Xcompile.mode=OFF" rvm-exec jruby-1.7.19 bundle exec appraisal rails-4.2 rake spec:integration:rails
+          3)
+            JRUBY_OPTS="--dev -Xcompile.invokedynamic=false -J-XX:+TieredCompilation -J-XX:TieredStopAtLevel=1 -J-noverify -Xcompile.mode=OFF" rvm-exec jruby-9.0.4.0 bundle exec appraisal rails-3.2 rake spec:integration:rails
+            JRUBY_OPTS="--dev -Xcompile.invokedynamic=false -J-XX:+TieredCompilation -J-XX:TieredStopAtLevel=1 -J-noverify -Xcompile.mode=OFF" rvm-exec jruby-9.0.4.0 bundle exec appraisal rails-4.0 rake spec:integration:rails
+            ;;
+          4)
+            JRUBY_OPTS="--dev -Xcompile.invokedynamic=false -J-XX:+TieredCompilation -J-XX:TieredStopAtLevel=1 -J-noverify -Xcompile.mode=OFF" rvm-exec jruby-9.0.4.0 bundle exec appraisal rails-4.1 rake spec:integration:rails
+            JRUBY_OPTS="--dev -Xcompile.invokedynamic=false -J-XX:+TieredCompilation -J-XX:TieredStopAtLevel=1 -J-noverify -Xcompile.mode=OFF" rvm-exec jruby-9.0.4.0 bundle exec appraisal rails-4.2 rake spec:integration:rails
+            ;;
+          5)
+            JRUBY_OPTS="--dev -Xcompile.invokedynamic=false -J-XX:+TieredCompilation -J-XX:TieredStopAtLevel=1 -J-noverify -Xcompile.mode=OFF" rvm-exec jruby-9.0.4.0 bundle exec appraisal sinatra rake spec:integration:sinatra
+            JRUBY_OPTS="--dev -Xcompile.invokedynamic=false -J-XX:+TieredCompilation -J-XX:TieredStopAtLevel=1 -J-noverify -Xcompile.mode=OFF" rvm-exec jruby-9.0.4.0 bundle exec appraisal rack rake spec:integration:rack
             ;;
         esac
       :
@@ -67,10 +97,13 @@ test:
             rvm-exec 1.9.3-p551 bundle exec rake spec:unit
             ;;
           1)
-            rvm-exec 2.3.0 bundle exec rake spec:unit
+            rvm-exec 2.0.0-p645 bundle exec rake spec:unit
             ;;
           2)
-            JRUBY_OPTS="--dev -Xcompile.invokedynamic=false -J-XX:+TieredCompilation -J-XX:TieredStopAtLevel=1 -J-noverify -Xcompile.mode=OFF" rvm-exec jruby-1.7.19 bundle exec rake spec:unit
+            rvm-exec 2.3.0 bundle exec rake spec:unit
+            ;;
+          3)
+            JRUBY_OPTS="--dev -Xcompile.invokedynamic=false -J-XX:+TieredCompilation -J-XX:TieredStopAtLevel=1 -J-noverify -Xcompile.mode=OFF" rvm-exec jruby-9.0.4.0 bundle exec rake spec:unit
             ;;
         esac
       :
