circle: update rubies and use unused containers

--- a/circle.yml
+++ b/circle.yml
@@ -2,7 +2,7 @@ machine:
   java:
     version: openjdk7
   ruby:
-    version: 2.3.3
+    version: 2.4.0
 
 dependencies:
   cache_directories:
@@ -12,28 +12,31 @@ dependencies:
     - ? |
         case $CIRCLE_NODE_INDEX in
           0)
-            ;;
-          1)
             rvm-exec 2.0.0-p645 bundle install --jobs=15 --path=vendor
             rvm-exec 2.0.0-p645 bundle exec appraisal install --jobs=15
             ;;
+          1)
+            rvm-exec 2.1.10 bundle install --jobs=15 --path=vendor
+            rvm-exec 2.1.10 bundle exec appraisal install --jobs=15
+            ;;
           2)
+            rvm-exec 2.2.5 bundle install --jobs=15 --path=vendor
+            rvm-exec 2.2.5 bundle exec appraisal install --jobs=15
+            ;;
+          3)
             rvm-exec 2.3.3 bundle install --jobs=15 --path=vendor
             rvm-exec 2.3.3 bundle exec appraisal install --jobs=15
             ;;
-          3)
-            # The 'dev' switch makes JRuby start about 2.5 times faster.
-            # See: https://github.com/jruby/jruby/wiki/Improving-startup-time
-            JRUBY_OPTS="--dev -Xcompile.invokedynamic=false -J-XX:+TieredCompilation -J-XX:TieredStopAtLevel=1 -J-noverify -Xcompile.mode=OFF" rvm-exec jruby-9.1.5.0 bundle install --jobs=15 --path=vendor
-            JRUBY_OPTS="--dev -Xcompile.invokedynamic=false -J-XX:+TieredCompilation -J-XX:TieredStopAtLevel=1 -J-noverify -Xcompile.mode=OFF" rvm-exec jruby-9.1.5.0 bundle exec appraisal install --jobs=15
-            ;;
           4)
-            JRUBY_OPTS="--dev -Xcompile.invokedynamic=false -J-XX:+TieredCompilation -J-XX:TieredStopAtLevel=1 -J-noverify -Xcompile.mode=OFF" rvm-exec jruby-9.1.5.0 bundle install --jobs=15 --path=vendor
-            JRUBY_OPTS="--dev -Xcompile.invokedynamic=false -J-XX:+TieredCompilation -J-XX:TieredStopAtLevel=1 -J-noverify -Xcompile.mode=OFF" rvm-exec jruby-9.1.5.0 bundle exec appraisal install --jobs=15
+            rvm-exec 2.4.0 bundle install --jobs=15 --path=vendor
+            rvm-exec 2.4.0 bundle exec appraisal install --jobs=15
             ;;
           5)
-            JRUBY_OPTS="--dev -Xcompile.invokedynamic=false -J-XX:+TieredCompilation -J-XX:TieredStopAtLevel=1 -J-noverify -Xcompile.mode=OFF" rvm-exec jruby-9.1.5.0 bundle install --jobs=15 --path=vendor
-            JRUBY_OPTS="--dev -Xcompile.invokedynamic=false -J-XX:+TieredCompilation -J-XX:TieredStopAtLevel=1 -J-noverify -Xcompile.mode=OFF" rvm-exec jruby-9.1.5.0 bundle exec appraisal install --jobs=15
+            # The 'dev' switch makes JRuby start about 2.5 times faster.
+            # See: https://github.com/jruby/jruby/wiki/Improving-startup-time
+            export JRUBY_OPTS="--dev -Xcompile.invokedynamic=false -J-XX:+TieredCompilation -J-XX:TieredStopAtLevel=1 -J-noverify -Xcompile.mode=OFF"
+            rvm-exec jruby-9.1.5.0 bundle install --jobs=15 --path=vendor
+            rvm-exec jruby-9.1.5.0 bundle exec appraisal install --jobs=15
             ;;
         esac
       :
@@ -43,11 +46,8 @@ test:
   override:
     - bundle exec rubocop
     - ? |
-        set -e
         case $CIRCLE_NODE_INDEX in
           0)
-            ;;
-          1)
             rvm-exec 2.0.0-p645 bundle exec appraisal rails-3.2 rake spec:integration:rails
             rvm-exec 2.0.0-p645 bundle exec appraisal rails-4.0 rake spec:integration:rails
             rvm-exec 2.0.0-p645 bundle exec appraisal rails-4.1 rake spec:integration:rails
@@ -57,47 +57,75 @@ test:
 
             rvm-exec 2.0.0-p645 bundle exec appraisal rack rake spec:integration:rack
             ;;
+          1)
+            rvm-exec 2.1.10 bundle exec appraisal rails-3.2 rake spec:integration:rails
+            rvm-exec 2.1.10 bundle exec appraisal rails-4.0 rake spec:integration:rails
+            rvm-exec 2.1.10 bundle exec appraisal rails-4.1 rake spec:integration:rails
+            rvm-exec 2.1.10 bundle exec appraisal rails-4.2 rake spec:integration:rails
+            rvm-exec 2.1.10 bundle exec appraisal rails-5.0 rake spec:integration:rails
+
+            rvm-exec 2.1.10 bundle exec appraisal sinatra rake spec:integration:sinatra
+
+            rvm-exec 2.1.10 bundle exec appraisal rack rake spec:integration:rack
+            ;;
           2)
+            rvm-exec 2.2.5 bundle exec appraisal rails-3.2 rake spec:integration:rails
+            rvm-exec 2.2.5 bundle exec appraisal rails-4.0 rake spec:integration:rails
+            rvm-exec 2.2.5 bundle exec appraisal rails-4.1 rake spec:integration:rails
+            rvm-exec 2.2.5 bundle exec appraisal rails-4.2 rake spec:integration:rails
+            rvm-exec 2.2.5 bundle exec appraisal rails-5.0 rake spec:integration:rails
+
+            rvm-exec 2.2.5 bundle exec appraisal sinatra rake spec:integration:sinatra
+
+            rvm-exec 2.2.5 bundle exec appraisal rack rake spec:integration:rack
+            ;;
+          3)
             rvm-exec 2.3.3 bundle exec appraisal rails-3.2 rake spec:integration:rails
             rvm-exec 2.3.3 bundle exec appraisal rails-4.0 rake spec:integration:rails
             rvm-exec 2.3.3 bundle exec appraisal rails-4.1 rake spec:integration:rails
             rvm-exec 2.3.3 bundle exec appraisal rails-4.2 rake spec:integration:rails
             rvm-exec 2.3.3 bundle exec appraisal rails-5.0 rake spec:integration:rails
-            rvm-exec 2.3.3 bundle exec appraisal rails-edge rake spec:integration:rails
 
             rvm-exec 2.3.3 bundle exec appraisal sinatra rake spec:integration:sinatra
 
             rvm-exec 2.3.3 bundle exec appraisal rack rake spec:integration:rack
             ;;
-          3)
-            JRUBY_OPTS="--dev -Xcompile.invokedynamic=false -J-XX:+TieredCompilation -J-XX:TieredStopAtLevel=1 -J-noverify -Xcompile.mode=OFF" rvm-exec jruby-9.1.5.0 bundle exec appraisal rails-3.2 rake spec:integration:rails
-            JRUBY_OPTS="--dev -Xcompile.invokedynamic=false -J-XX:+TieredCompilation -J-XX:TieredStopAtLevel=1 -J-noverify -Xcompile.mode=OFF" rvm-exec jruby-9.1.5.0 bundle exec appraisal rails-4.0 rake spec:integration:rails
-            ;;
           4)
-            JRUBY_OPTS="--dev -Xcompile.invokedynamic=false -J-XX:+TieredCompilation -J-XX:TieredStopAtLevel=1 -J-noverify -Xcompile.mode=OFF" rvm-exec jruby-9.1.5.0 bundle exec appraisal rails-4.1 rake spec:integration:rails
-            JRUBY_OPTS="--dev -Xcompile.invokedynamic=false -J-XX:+TieredCompilation -J-XX:TieredStopAtLevel=1 -J-noverify -Xcompile.mode=OFF" rvm-exec jruby-9.1.5.0 bundle exec appraisal rails-4.2 rake spec:integration:rails
+            rvm-exec 2.4.0 bundle exec appraisal rails-3.2 rake spec:integration:rails
+            rvm-exec 2.4.0 bundle exec appraisal rails-4.0 rake spec:integration:rails
+            rvm-exec 2.4.0 bundle exec appraisal rails-4.1 rake spec:integration:rails
+            rvm-exec 2.4.0 bundle exec appraisal rails-4.2 rake spec:integration:rails
+            rvm-exec 2.4.0 bundle exec appraisal rails-5.0 rake spec:integration:rails
+            rvm-exec 2.4.0 bundle exec appraisal rails-edge rake spec:integration:rails
+
+            rvm-exec 2.4.0 bundle exec appraisal sinatra rake spec:integration:sinatra
+
+            rvm-exec 2.4.0 bundle exec appraisal rack rake spec:integration:rack
             ;;
           5)
-            JRUBY_OPTS="--dev -Xcompile.invokedynamic=false -J-XX:+TieredCompilation -J-XX:TieredStopAtLevel=1 -J-noverify -Xcompile.mode=OFF" rvm-exec jruby-9.1.5.0 bundle exec appraisal sinatra rake spec:integration:sinatra
-            JRUBY_OPTS="--dev -Xcompile.invokedynamic=false -J-XX:+TieredCompilation -J-XX:TieredStopAtLevel=1 -J-noverify -Xcompile.mode=OFF" rvm-exec jruby-9.1.5.0 bundle exec appraisal rack rake spec:integration:rack
+            export JRUBY_OPTS="--dev -Xcompile.invokedynamic=false -J-XX:+TieredCompilation -J-XX:TieredStopAtLevel=1 -J-noverify -Xcompile.mode=OFF"
+
+            rvm-exec jruby-9.1.5.0 bundle exec appraisal rails-3.2 rake spec:integration:rails
+            rvm-exec jruby-9.1.5.0 bundle exec appraisal rails-4.0 rake spec:integration:rails
+            rvm-exec jruby-9.1.5.0 bundle exec appraisal rails-4.1 rake spec:integration:rails
+            rvm-exec jruby-9.1.5.0 bundle exec appraisal rails-4.2 rake spec:integration:rails
+            rvm-exec jruby-9.1.5.0 bundle exec appraisal rails-5.0 rake spec:integration:rails
+
+            rvm-exec jruby-9.1.5.0 bundle exec appraisal sinatra rake spec:integration:sinatra
+
+            rvm-exec jruby-9.1.5.0 bundle exec appraisal rack rake spec:integration:rack
             ;;
         esac
       :
         parallel: true
     - ? |
-        set -e
         case $CIRCLE_NODE_INDEX in
-          0)
-            ;;
-          1)
-            rvm-exec 2.0.0-p645 bundle exec rake spec:unit
-            ;;
-          2)
-            rvm-exec 2.3.3 bundle exec rake spec:unit
-            ;;
-          3)
-            JRUBY_OPTS="--dev -Xcompile.invokedynamic=false -J-XX:+TieredCompilation -J-XX:TieredStopAtLevel=1 -J-noverify -Xcompile.mode=OFF" rvm-exec jruby-9.1.5.0 bundle exec rake spec:unit
-            ;;
+          0) rvm-exec 2.0.0-p645 bundle exec rake spec:unit ;;
+          1) rvm-exec 2.1.10 bundle exec rake spec:unit ;;
+          2) rvm-exec 2.2.5 bundle exec rake spec:unit ;;
+          3) rvm-exec 2.3.3 bundle exec rake spec:unit ;;
+          4) rvm-exec 2.4.0 bundle exec rake spec:unit ;;
+          5) JRUBY_OPTS="--dev -Xcompile.invokedynamic=false -J-XX:+TieredCompilation -J-XX:TieredStopAtLevel=1 -J-noverify -Xcompile.mode=OFF" rvm-exec jruby-9.1.5.0 bundle exec rake spec:unit ;;
         esac
       :
         parallel: true
