--- a/circle.yml
+++ b/circle.yml
@@ -5,42 +5,47 @@ machine:
     version: 2.4.0
 
 dependencies:
-  cache_directories:
-    - vendor
   override:
-    - bundle install --path=vendor
+    - gem update --remote bundler
+    - gem update --system
+    - bundle install
     - ? |
         case $CIRCLE_NODE_INDEX in
           0)
-            rvm-exec 2.0.0-p645 bundle install --jobs=15 --path=vendor
+            rvm-exec 2.0.0-p645 bundle install --jobs=15
             rvm-exec 2.0.0-p645 bundle exec appraisal install --jobs=15
             ;;
           1)
-            rvm-exec 2.1.10 bundle install --jobs=15 --path=vendor
+            rvm-exec 2.1.10 bundle install --jobs=15
             rvm-exec 2.1.10 bundle exec appraisal install --jobs=15
             ;;
           2)
-            rvm-exec 2.2.5 bundle install --jobs=15 --path=vendor
+            rvm-exec 2.2.5 bundle install --jobs=15
             rvm-exec 2.2.5 bundle exec appraisal install --jobs=15
             ;;
           3)
-            rvm-exec 2.3.3 bundle install --jobs=15 --path=vendor
+            # Workaround for https://github.com/sickill/rainbow/issues/48
+            rvm-exec 2.3.3 gem update --remote bundler
+            rvm-exec 2.3.3 gem update --system
+
+            rvm-exec 2.3.3 bundle install --jobs=15
             rvm-exec 2.3.3 bundle exec appraisal install --jobs=15
             ;;
           4)
-            rvm-exec 2.4.0 bundle install --jobs=15 --path=vendor
+            rvm-exec 2.4.0 bundle install --jobs=15
             rvm-exec 2.4.0 bundle exec appraisal install --jobs=15
             ;;
           5)
-            # Workaround for https://github.com/sickill/rainbow/issues/48
-            # rvm-exec jruby-9.1.7.0 gem update --remote bundler
-            # rvm-exec jruby-9.1.7.0 gem update --system
-
             # The 'dev' switch makes JRuby start about 2.5 times faster.
             # See: https://github.com/jruby/jruby/wiki/Improving-startup-time
-            # export JRUBY_OPTS="--dev -Xcompile.invokedynamic=false -J-XX:+TieredCompilation -J-XX:TieredStopAtLevel=1 -J-noverify -Xcompile.mode=OFF"
-            # rvm-exec jruby-9.1.7.0 bundle install --jobs=15 --path=vendor
-            # rvm-exec jruby-9.1.7.0 bundle exec appraisal install --jobs=15
+            export JRUBY_OPTS="--dev -Xcompile.invokedynamic=false -J-XX:+TieredCompilation -J-XX:TieredStopAtLevel=1 -J-noverify -Xcompile.mode=OFF"
+
+            # Workaround for https://github.com/sickill/rainbow/issues/48
+            rvm-exec jruby-9.1.7.0 gem update --remote bundler
+            rvm-exec jruby-9.1.7.0 gem update --system
+
+            rvm-exec jruby-9.1.7.0 bundle install --jobs=15
+            rvm-exec jruby-9.1.7.0 bundle exec appraisal install --jobs=15
             ;;
         esac
       :
@@ -106,17 +111,17 @@ test:
             rvm-exec 2.4.0 bundle exec appraisal rack rake spec:integration:rack
             ;;
           5)
-            # export JRUBY_OPTS="--dev -Xcompile.invokedynamic=false -J-XX:+TieredCompilation -J-XX:TieredStopAtLevel=1 -J-noverify -Xcompile.mode=OFF"
+            export JRUBY_OPTS="--dev -Xcompile.invokedynamic=false -J-XX:+TieredCompilation -J-XX:TieredStopAtLevel=1 -J-noverify -Xcompile.mode=OFF"
 
-            # rvm-exec jruby-9.1.7.0 bundle exec appraisal rails-3.2 rake spec:integration:rails
-            # rvm-exec jruby-9.1.7.0 bundle exec appraisal rails-4.0 rake spec:integration:rails
-            # rvm-exec jruby-9.1.7.0 bundle exec appraisal rails-4.1 rake spec:integration:rails
-            # rvm-exec jruby-9.1.7.0 bundle exec appraisal rails-4.2 rake spec:integration:rails
-            # rvm-exec jruby-9.1.7.0 bundle exec appraisal rails-5.0 rake spec:integration:rails
+            rvm-exec jruby-9.1.7.0 bundle exec appraisal rails-3.2 rake spec:integration:rails
+            rvm-exec jruby-9.1.7.0 bundle exec appraisal rails-4.0 rake spec:integration:rails
+            rvm-exec jruby-9.1.7.0 bundle exec appraisal rails-4.1 rake spec:integration:rails
+            rvm-exec jruby-9.1.7.0 bundle exec appraisal rails-4.2 rake spec:integration:rails
+            rvm-exec jruby-9.1.7.0 bundle exec appraisal rails-5.0 rake spec:integration:rails
 
-            # rvm-exec jruby-9.1.7.0 bundle exec appraisal sinatra rake spec:integration:sinatra
+            rvm-exec jruby-9.1.7.0 bundle exec appraisal sinatra rake spec:integration:sinatra
 
-            # rvm-exec jruby-9.1.7.0 bundle exec appraisal rack rake spec:integration:rack
+            rvm-exec jruby-9.1.7.0 bundle exec appraisal rack rake spec:integration:rack
             ;;
         esac
       :
@@ -129,8 +134,9 @@ test:
           3) rvm-exec 2.3.3 bundle exec rake spec:unit ;;
           4) rvm-exec 2.4.0 bundle exec rake spec:unit ;;
           5)
-            # JRUBY_OPTS="--dev -Xcompile.invokedynamic=false -J-XX:+TieredCompilation -J-XX:TieredStopAtLevel=1 -J-noverify -Xcompile.mode=OFF" rvm-exec jruby-9.1.7.0 bundle exec rake spec:unit
-          ;;
+            export JRUBY_OPTS="--dev -Xcompile.invokedynamic=false -J-XX:+TieredCompilation -J-XX:TieredStopAtLevel=1 -J-noverify -Xcompile.mode=OFF"
+            rvm-exec jruby-9.1.7.0 bundle exec rake spec:unit
+            ;;
         esac
       :
         parallel: true
