--- a/circle.yml
+++ b/circle.yml
@@ -56,71 +56,101 @@ test:
     - bundle exec rubocop
     - ? |
         case $CIRCLE_NODE_INDEX in
-          0)
-            rvm-exec 2.0.0-p645 bundle exec appraisal rails-3.2 rake spec:integration:rails
-            rvm-exec 2.0.0-p645 bundle exec appraisal rails-4.0 rake spec:integration:rails
-            rvm-exec 2.0.0-p645 bundle exec appraisal rails-4.1 rake spec:integration:rails
-            rvm-exec 2.0.0-p645 bundle exec appraisal rails-4.2 rake spec:integration:rails
-
-            rvm-exec 2.0.0-p645 bundle exec appraisal sinatra rake spec:integration:sinatra
-
-            rvm-exec 2.0.0-p645 bundle exec appraisal rack rake spec:integration:rack
-            ;;
-          1)
-            rvm-exec 2.1.10 bundle exec appraisal rails-3.2 rake spec:integration:rails
-            rvm-exec 2.1.10 bundle exec appraisal rails-4.0 rake spec:integration:rails
-            rvm-exec 2.1.10 bundle exec appraisal rails-4.1 rake spec:integration:rails
-            rvm-exec 2.1.10 bundle exec appraisal rails-4.2 rake spec:integration:rails
-
-            rvm-exec 2.1.10 bundle exec appraisal sinatra rake spec:integration:sinatra
-
-            rvm-exec 2.1.10 bundle exec appraisal rack rake spec:integration:rack
-            ;;
-          2)
-            rvm-exec 2.2.7 bundle exec appraisal rails-3.2 rake spec:integration:rails
-            rvm-exec 2.2.7 bundle exec appraisal rails-4.0 rake spec:integration:rails
-            rvm-exec 2.2.7 bundle exec appraisal rails-4.1 rake spec:integration:rails
-            rvm-exec 2.2.7 bundle exec appraisal rails-4.2 rake spec:integration:rails
-            rvm-exec 2.2.7 bundle exec appraisal rails-5.0 rake spec:integration:rails
-
-            rvm-exec 2.2.7 bundle exec appraisal sinatra rake spec:integration:sinatra
-
-            rvm-exec 2.2.7 bundle exec appraisal rack rake spec:integration:rack
-            ;;
-          3)
-            rvm-exec 2.3.4 bundle exec appraisal rails-3.2 rake spec:integration:rails
-            rvm-exec 2.3.4 bundle exec appraisal rails-4.0 rake spec:integration:rails
-            rvm-exec 2.3.4 bundle exec appraisal rails-4.1 rake spec:integration:rails
-            rvm-exec 2.3.4 bundle exec appraisal rails-4.2 rake spec:integration:rails
-            rvm-exec 2.3.4 bundle exec appraisal rails-5.0 rake spec:integration:rails
-
-            rvm-exec 2.3.4 bundle exec appraisal sinatra rake spec:integration:sinatra
-
-            rvm-exec 2.3.4 bundle exec appraisal rack rake spec:integration:rack
-            ;;
-          4)
-            rvm-exec 2.4.1 bundle exec appraisal rails-3.2 rake spec:integration:rails
-            rvm-exec 2.4.1 bundle exec appraisal rails-4.0 rake spec:integration:rails
-            rvm-exec 2.4.1 bundle exec appraisal rails-4.1 rake spec:integration:rails
-            rvm-exec 2.4.1 bundle exec appraisal rails-4.2 rake spec:integration:rails
-            rvm-exec 2.4.1 bundle exec appraisal rails-5.0 rake spec:integration:rails
-            rvm-exec 2.4.1 bundle exec appraisal rails-edge rake spec:integration:rails
-
-            rvm-exec 2.4.1 bundle exec appraisal sinatra rake spec:integration:sinatra
-
-            rvm-exec 2.4.1 bundle exec appraisal rack rake spec:integration:rack
-            ;;
+          0) rvm-exec 2.0.0-p645 bundle exec appraisal rails-3.2 rake spec:integration:rails ;;
+          1) rvm-exec 2.1.10 bundle exec appraisal rails-3.2 rake spec:integration:rails ;;
+          2) rvm-exec 2.2.7 bundle exec appraisal rails-3.2 rake spec:integration:rails ;;
+          3) rvm-exec 2.3.4 bundle exec appraisal rails-3.2 rake spec:integration:rails ;;
+          4) rvm-exec 2.4.1 bundle exec appraisal rails-3.2 rake spec:integration:rails ;;
           5)
             export JRUBY_OPTS="--dev -Xcompile.invokedynamic=false -J-XX:+TieredCompilation -J-XX:TieredStopAtLevel=1 -J-noverify -Xcompile.mode=OFF"
-
             rvm-exec jruby-9.1.8.0 bundle exec appraisal rails-3.2 rake spec:integration:rails
+            ;;
+        esac
+      :
+        parallel: true
+    - ? |
+        case $CIRCLE_NODE_INDEX in
+          0) rvm-exec 2.0.0-p645 bundle exec appraisal rails-4.0 rake spec:integration:rails ;;
+          1) rvm-exec 2.1.10 bundle exec appraisal rails-4.0 rake spec:integration:rails ;;
+          2) rvm-exec 2.2.7 bundle exec appraisal rails-4.0 rake spec:integration:rails ;;
+          3) rvm-exec 2.3.4 bundle exec appraisal rails-4.0 rake spec:integration:rails ;;
+          4) rvm-exec 2.4.1 bundle exec appraisal rails-4.0 rake spec:integration:rails ;;
+          5)
+            export JRUBY_OPTS="--dev -Xcompile.invokedynamic=false -J-XX:+TieredCompilation -J-XX:TieredStopAtLevel=1 -J-noverify -Xcompile.mode=OFF"
             rvm-exec jruby-9.1.8.0 bundle exec appraisal rails-4.0 rake spec:integration:rails
+            ;;
+        esac
+      :
+        parallel: true
+    - ? |
+        case $CIRCLE_NODE_INDEX in
+          0) rvm-exec 2.0.0-p645 bundle exec appraisal rails-4.1 rake spec:integration:rails ;;
+          1) rvm-exec 2.1.10 bundle exec appraisal rails-4.1 rake spec:integration:rails ;;
+          2) rvm-exec 2.2.7 bundle exec appraisal rails-4.1 rake spec:integration:rails ;;
+          3) rvm-exec 2.3.4 bundle exec appraisal rails-4.1 rake spec:integration:rails ;;
+          4) rvm-exec 2.4.1 bundle exec appraisal rails-4.1 rake spec:integration:rails ;;
+          5)
+            export JRUBY_OPTS="--dev -Xcompile.invokedynamic=false -J-XX:+TieredCompilation -J-XX:TieredStopAtLevel=1 -J-noverify -Xcompile.mode=OFF"
             rvm-exec jruby-9.1.8.0 bundle exec appraisal rails-4.1 rake spec:integration:rails
+            ;;
+        esac
+      :
+        parallel: true
+    - ? |
+        case $CIRCLE_NODE_INDEX in
+          0) rvm-exec 2.0.0-p645 bundle exec appraisal rails-4.2 rake spec:integration:rails ;;
+          1) rvm-exec 2.1.10 bundle exec appraisal rails-4.2 rake spec:integration:rails ;;
+          2) rvm-exec 2.2.7 bundle exec appraisal rails-4.2 rake spec:integration:rails ;;
+          3) rvm-exec 2.3.4 bundle exec appraisal rails-4.2 rake spec:integration:rails ;;
+          4) rvm-exec 2.4.1 bundle exec appraisal rails-4.2 rake spec:integration:rails ;;
+          5)
+            export JRUBY_OPTS="--dev -Xcompile.invokedynamic=false -J-XX:+TieredCompilation -J-XX:TieredStopAtLevel=1 -J-noverify -Xcompile.mode=OFF"
             rvm-exec jruby-9.1.8.0 bundle exec appraisal rails-4.2 rake spec:integration:rails
+            ;;
+        esac
+      :
+        parallel: true
+    - ? |
+        case $CIRCLE_NODE_INDEX in
+          2) rvm-exec 2.2.7 bundle exec appraisal rails-5.0 rake spec:integration:rails ;;
+          3) rvm-exec 2.3.4 bundle exec appraisal rails-5.0 rake spec:integration:rails ;;
+          4) rvm-exec 2.4.1 bundle exec appraisal rails-5.0 rake spec:integration:rails ;;
+          5)
+            export JRUBY_OPTS="--dev -Xcompile.invokedynamic=false -J-XX:+TieredCompilation -J-XX:TieredStopAtLevel=1 -J-noverify -Xcompile.mode=OFF"
             rvm-exec jruby-9.1.8.0 bundle exec appraisal rails-5.0 rake spec:integration:rails
-
+            ;;
+        esac
+      :
+        parallel: true
+    - ? |
+        case $CIRCLE_NODE_INDEX in
+          4) rvm-exec 2.4.1 bundle exec appraisal rails-edge rake spec:integration:rails ;;
+        esac
+      :
+        parallel: true
+    - ? |
+        case $CIRCLE_NODE_INDEX in
+          0) rvm-exec 2.0.0-p645 bundle exec appraisal sinatra rake spec:integration:sinatra ;;
+          1) rvm-exec 2.1.10 bundle exec appraisal sinatra rake spec:integration:sinatra ;;
+          2) rvm-exec 2.2.7 bundle exec appraisal sinatra rake spec:integration:sinatra ;;
+          3) rvm-exec 2.3.4 bundle exec appraisal sinatra rake spec:integration:sinatra ;;
+          4) rvm-exec 2.4.1 bundle exec appraisal sinatra rake spec:integration:sinatra ;;
+          5)
+            export JRUBY_OPTS="--dev -Xcompile.invokedynamic=false -J-XX:+TieredCompilation -J-XX:TieredStopAtLevel=1 -J-noverify -Xcompile.mode=OFF"
             rvm-exec jruby-9.1.8.0 bundle exec appraisal sinatra rake spec:integration:sinatra
-
+            ;;
+        esac
+      :
+        parallel: true
+    - ? |
+        case $CIRCLE_NODE_INDEX in
+          0) rvm-exec 2.0.0-p645 bundle exec appraisal rack rake spec:integration:rack ;;
+          1) rvm-exec 2.1.10 bundle exec appraisal rack rake spec:integration:rack ;;
+          2) rvm-exec 2.2.7 bundle exec appraisal rack rake spec:integration:rack ;;
+          3) rvm-exec 2.3.4 bundle exec appraisal rack rake spec:integration:rack ;;
+          4) rvm-exec 2.4.1 bundle exec appraisal rack rake spec:integration:rack ;;
+          5)
+            export JRUBY_OPTS="--dev -Xcompile.invokedynamic=false -J-XX:+TieredCompilation -J-XX:TieredStopAtLevel=1 -J-noverify -Xcompile.mode=OFF"
             rvm-exec jruby-9.1.8.0 bundle exec appraisal rack rake spec:integration:rack
             ;;
         esac
