rubocop: fix "wrong namespace" warnings
As seen in https://circleci.com/gh/airbrake/airbrake/1490#tests/containers/4

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -11,7 +11,7 @@ Metrics/MethodLength:
 Metrics/LineLength:
   Max: 90
 
-Style/DotPosition:
+Layout/DotPosition:
   EnforcedStyle: trailing
 
 # Details:
@@ -47,9 +47,9 @@ Metrics/BlockLength:
     - 'airbrake.gemspec'
     - 'lib/airbrake/rake/tasks.rb'
 
-Style/IndentHeredoc:
+Layout/IndentHeredoc:
   Enabled: false
 
-Style/FileName:
+Naming/FileName:
   Exclude:
     - 'Appraisals'
