Fix new Rubocop offences introduced by v0.52.0

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -56,3 +56,10 @@ Naming/FileName:
 
 Gemspec/OrderedDependencies:
   Enabled: false
+
+Gemspec/RequiredRubyVersion:
+  Enabled: false
+
+# Broken behaviour: https://github.com/bbatsov/rubocop/issues/5224
+Layout/EmptyLinesAroundArguments:
+  Enabled: false
