rubocop: disable the Bundle/OrderedGems cop
This cop is nothing but a nitpick. Following its rules doesn't give anything but
headache, thus I'm disabling it.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -63,3 +63,6 @@ Gemspec/RequiredRubyVersion:
 # Broken behaviour: https://github.com/bbatsov/rubocop/issues/5224
 Layout/EmptyLinesAroundArguments:
   Enabled: false
+
+Bundler/OrderedGems:
+  Enabled: false
