rubocop: disable the Naming/UncommunicativeMethodParamName cop
This rule is a little annoying to follow. Although I understand that it
prevents you from bad variable names, sometimes they are useful (for example,
`h` or `th`).

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -66,3 +66,6 @@ Layout/EmptyLinesAroundArguments:
 
 Bundler/OrderedGems:
   Enabled: false
+
+Naming/UncommunicativeMethodParamName:
+  Enabled: false
