rubocop: ignore gemfiles for the Style/SymbolArray cop
Those gemfiles are autogenerated and it is not recommended to edit them by hand.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -69,3 +69,7 @@ Bundler/OrderedGems:
 
 Naming/UncommunicativeMethodParamName:
   Enabled: false
+
+Style/SymbolArray:
+  Exclude:
+    - gemfiles/*.gemfile
