circleci: commit Dockerfile for Ruby 2.0.0
CircleCI doesn't host Ruby 2.0 anymore but we still support it. We've been
hosting the custom image for several months but DockerHub doesn't display the
Dockerfile used. I am committing it here so it's not lost.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -63,7 +63,7 @@ jobs:
           command: bundle exec rubocop --parallel
   "ruby-2.0":
     docker:
-      - image: kyrylo/ruby-2.0.0p648
+      - image: kyrylo/ruby-2.0.0p648-airbrake
     working_directory: /home/circleci/airbrake
     steps:
       - <<: *repo_restore_cache
