rack/middleware: default to 500 instead of 0 if code can't be found
When `ActionDispatch::ExceptionWrapper` fails to return a code for an exception,
then it returns 0. This confuses our backend, so we should convert that into 500
as the most reasonable default value.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -73,3 +73,6 @@ Naming/UncommunicativeMethodParamName:
 Style/SymbolArray:
   Exclude:
     - gemfiles/*.gemfile
+
+Style/NumericPredicate:
+  Enabled: false
