circleci: test on Ruby 2.6

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,7 +52,7 @@ references:
 jobs:
   lint:
     docker:
-      - image: circleci/ruby:2.5
+      - image: circleci/ruby:2.6
     working_directory: ~/airbrake
     steps:
       - checkout
@@ -137,6 +137,21 @@ jobs:
       - <<: *rails52
       - <<: *sinatra
       - <<: *rack
+  "ruby-2.6":
+    docker:
+      - image: circleci/ruby:2.6
+    working_directory: ~/airbrake
+    steps:
+      - <<: *repo_restore_cache
+      - <<: *bundle_install
+      - <<: *appraisal_install
+      - <<: *unit
+      - <<: *rails32
+      - <<: *rails42
+      - <<: *rails51
+      - <<: *rails52
+      - <<: *sinatra
+      - <<: *rack
   "jruby-9.2.0.0":
     docker:
       - image: circleci/jruby:9.2.0.0
@@ -172,6 +187,9 @@ workflows:
           requires:
             - lint
       - "ruby-2.5":
+          requires:
+            - lint
+      - "ruby-2.6":
           requires:
             - lint
       - "jruby-9.2.0.0":
