--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -73,3 +73,12 @@ Style/SymbolArray:
 
 Style/NumericPredicate:
   Enabled: false
+
+Style/TrailingCommaInArguments:
+  EnforcedStyleForMultiline: comma
+
+Style/TrailingCommaInArrayLiteral:
+  EnforcedStyleForMultiline: comma
+
+Style/TrailingCommaInHashLiteral:
+  EnforcedStyleForMultiline: comma
