Test against ruby-2.7.0 final

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -164,7 +164,7 @@ jobs:
       - <<: *rack
   "ruby-2.7":
     docker:
-      - image: circleci/ruby:2.7.0-preview1
+      - image: circleci/ruby:2.7.0
     working_directory: ~/airbrake
     steps:
       - <<: *repo_restore_cache
