Rails 5.2 for activerecord-jdbcsqlite3-adapter
The gem supports it now, so JRuby should too.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -188,8 +188,7 @@ jobs:
       - <<: *rails32
       - <<: *rails42
       - <<: *rails51
-      # https://github.com/jruby/activerecord-jdbc-adapter doesn't support it yet.
-      # - <<: *rails52
+      - <<: *rails52
       - <<: *sinatra
       - <<: *rack
 
