Make sure there are frozen string literals
Turns out that they were added in Ruby 2.3, not 3.0.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -30,9 +30,13 @@ Style/NumericLiterals:
 Style/SignalException:
   EnforcedStyle: only_raise
 
-# TODO: enable this when Ruby 3.0 is out.
 Style/FrozenStringLiteralComment:
-  Enabled: false
+  Enabled: true
+  EnforcedStyle: always
+  Exclude:
+    - 'Gemfile'
+    - 'airbrake.gemspec'
+    - '**/*.gemfile'
 
 Metrics/BlockLength:
   CountComments: false
