rubocop: disable Naming/RescuedExceptionsVariableName
This cop doesn't understand nested exceptions and wants them all to look like
`e`. This is detrimental and to avoid it it's better to disable it.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -86,3 +86,6 @@ Style/TrailingCommaInArrayLiteral:
 
 Style/TrailingCommaInHashLiteral:
   EnforcedStyleForMultiline: comma
+
+Naming/RescuedExceptionsVariableName:
+  Enabled: false
