--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -89,3 +89,6 @@ Style/TrailingCommaInHashLiteral:
 
 Naming/RescuedExceptionsVariableName:
   Enabled: false
+
+Lint/NonDeterministicRequireOrder:
+  Enabled: false
