--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -92,3 +92,18 @@ Naming/RescuedExceptionsVariableName:
 
 Lint/NonDeterministicRequireOrder:
   Enabled: false
+
+Lint/RaiseException:
+  Enabled: true
+
+Lint/StructNewOverride:
+  Enabled: true
+
+Style/HashEachMethods:
+  Enabled: true
+
+Style/HashTransformKeys:
+  Enabled: true
+
+Style/HashTransformValues:
+  Enabled: true
