--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,6 +57,9 @@ jobs:
   lint:
     docker:
       - image: circleci/ruby:2.7
+        auth:
+          username: $DOCKERHUB_USER
+          password: $DOCKERHUB_PASSWORD
     working_directory: ~/airbrake
     steps:
       - checkout
@@ -68,6 +71,9 @@ jobs:
   "ruby-2.3":
     docker:
       - image: circleci/ruby:2.3
+        auth:
+          username: $DOCKERHUB_USER
+          password: $DOCKERHUB_PASSWORD
     working_directory: ~/airbrake
     steps:
       - <<: *repo_restore_cache
@@ -84,6 +90,9 @@ jobs:
   "ruby-2.4":
     docker:
       - image: circleci/ruby:2.4
+        auth:
+          username: $DOCKERHUB_USER
+          password: $DOCKERHUB_PASSWORD
     working_directory: ~/airbrake
     steps:
       - <<: *repo_restore_cache
@@ -99,6 +108,9 @@ jobs:
   "ruby-2.5":
     docker:
       - image: circleci/ruby:2.5
+        auth:
+          username: $DOCKERHUB_USER
+          password: $DOCKERHUB_PASSWORD
     working_directory: ~/airbrake
     steps:
       - <<: *repo_restore_cache
@@ -114,6 +126,9 @@ jobs:
   "ruby-2.6":
     docker:
       - image: circleci/ruby:2.6
+        auth:
+          username: $DOCKERHUB_USER
+          password: $DOCKERHUB_PASSWORD
     working_directory: ~/airbrake
     steps:
       - <<: *repo_restore_cache
@@ -130,6 +145,9 @@ jobs:
   "ruby-2.7":
     docker:
       - image: circleci/ruby:2.7
+        auth:
+          username: $DOCKERHUB_USER
+          password: $DOCKERHUB_PASSWORD
     working_directory: ~/airbrake
     steps:
       - <<: *repo_restore_cache
@@ -145,6 +163,9 @@ jobs:
   "jruby-9.2":
     docker:
       - image: circleci/jruby:9.2
+        auth:
+          username: $DOCKERHUB_USER
+          password: $DOCKERHUB_PASSWORD
     working_directory: ~/airbrake
     steps:
       - <<: *repo_restore_cache
