--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,7 +7,8 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        ruby: [2.5, 2.6, 2.7, jruby]
+        # Due to https://github.com/actions/runner/issues/849, we have to use quotes for '3.0'
+        ruby: [2.5, 2.6, 2.7, '3.0', jruby]
 
     runs-on: ${{ matrix.os }}
 
@@ -41,6 +42,7 @@ jobs:
         run: bundle exec rake spec:unit
 
       - name: Test Rails 5.2
+        if: ${{ matrix.ruby != '3.0' }}
         run: bundle exec appraisal rails-5.2 rake spec:integration:rails
 
       - name: Test Rails 6.0
