Test against Rails 6.1 and fix broken tests
Rails 6.1 deprecates rendering actions with `.` in the name, which breaks some
of our tests. We expect the `view` param in the breakdown to be present, but
it's not anymore due to this warning. Fixing the warning fixes the tests.

When I made this change, other routes started to include the `view` param as
well, therefore I added it to make other tests pass.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -48,6 +48,9 @@ jobs:
       - name: Test Rails 6.0
         run: bundle exec appraisal rails-6.0 rake spec:integration:rails
 
+      - name: Test Rails 6.1
+        run: bundle exec appraisal rails-6.1 rake spec:integration:rails
+
       - name: Test Sinatra
         run: bundle exec appraisal sinatra rake spec:integration:sinatra
 
