Depend on development version of sneakers
We have to do that so that we can resolve the rake version problem (sneakers
wants an older version of rake, other gems want newer). This was fixed on their
`master`.

Likely the issue to track: https://github.com/jondot/sneakers/issues/452

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -4,6 +4,9 @@ AllCops:
   TargetRubyVersion: 2.5
   DisplayCopNames: true
   DisplayStyleGuide: true
+  Exclude:
+    - 'gemfiles/*.gemfile'
+    - 'vendor/**/*'
 
 Metrics/MethodLength:
   Max: 25
