--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -50,6 +50,10 @@ jobs:
       - name: Test Rails 6.1
         run: bundle exec appraisal rails-6.1 rake spec:integration:rails
 
+      - name: Test Rails 7.0
+        if: ${{ matrix.ruby != '2.6' && matrix.ruby != 'jruby' }}
+        run: bundle exec appraisal rails-7.0 rake spec:integration:rails
+
       - name: Test Sinatra
         run: bundle exec appraisal sinatra rake spec:integration:sinatra
 
